src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_containers_tests__a_program_needs_to_end_with_end_program.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected `END_PROGRAM` but found ''
  ┌─ <internal>:1:13
  │
1 │ PROGRAM buz 
  │             ^ Unexpected token: expected `END_PROGRAM` but found ''
